P2: Created error message for when city name not recognized, ripples fade over time (althought not completely, please fix) Overlapping play back fixed - notes stopped before new mode composition is played.

--- a/Projects/Project2/weatherScape/css/weatherScape.css
+++ b/Projects/Project2/weatherScape/css/weatherScape.css
@@ -90,7 +90,7 @@ input[type="text"] {
 /* containers for the animating ripples that are draggable */
 .container {
   position: absolute;
-  top: 10%;
+  top: 9%;
   /* starting location for ripples */
   left: 5%;
   transform: translate(-20%, -50%);
